# qml-hcs

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements-docs.txt
.github/: dependabot.yml
.github/workflows/: codecov.yml  codeql.yml  python-package.yml
docs/: architecture.rst  benchmarks.rst  changelog.rst  conf.py  contributing.rst  examples.rst  getting_started.rst  index.rst  integration.rst  theory.rst
docs/examples/: ex_benchmark_performance_demo.rst  ex_hypercausal_chain_demo.rst  ex_minimal_core_demo.rst  ex_quantum_hypercore_case_study.rst  ex_training_with_callbacks_advanced.rst  ex_training_with_callbacks_demo.rst
docs/modules/: api_overview.rst
docs/modules/qmlhc/: index.rst
docs/modules/qmlhc/backends/: index.rst  qmlhc.backends.cpp_backend.rst  qmlhc.backends.pennylane_backend.rst  qmlhc.backends.qiskit_backend.rst
docs/modules/qmlhc/callbacks/: index.rst  qmlhc.callbacks.base.rst  qmlhc.callbacks.depth_control.rst  qmlhc.callbacks.telemetry.rst
docs/modules/qmlhc/core/: index.rst  qmlhc.core.backend.rst  qmlhc.core.model.rst  qmlhc.core.registry.rst  qmlhc.core.types.rst
docs/modules/qmlhc/examples/: index.rst  qmlhc.examples.ex_minimal_core_demo.rst
docs/modules/qmlhc/hc/: index.rst  qmlhc.hc.graph.rst  qmlhc.hc.node.rst  qmlhc.hc.policy.rst
docs/modules/qmlhc/loss/: index.rst  qmlhc.loss.coherence.rst  qmlhc.loss.consistency.rst  qmlhc.loss.task.rst
docs/modules/qmlhc/metrics/: index.rst  qmlhc.metrics.anomalies.rst  qmlhc.metrics.control.rst  qmlhc.metrics.forecasting.rst
docs/modules/qmlhc/optim/: index.rst  qmlhc.optim.api.rst
docs/modules/qmlhc/predictors/: index.rst  qmlhc.predictors.anticipator.rst  qmlhc.predictors.projector.rst
docs/source/: modules.rst  qmlhc.backends.rst  qmlhc.callbacks.rst  qmlhc.core.rst  qmlhc.examples.rst  qmlhc.hc.rst  qmlhc.loss.rst  qmlhc.metrics.rst  qmlhc.optim.rst  qmlhc.predictors.rst  qmlhc.rst
examples/: 03_training_with_callbacks_advanced.py  ex_benchmark_performance_demo.py  ex_hypercausal_chain_demo.py  ex_quantum_hypercore_case_study.py  ex_training_with_callbacks_advanced.py  ex_training_with_callbacks_demo.py
runs/: quantum_hypercore_case_telemetry.jsonl  scientific_case_telemetry.jsonl
src/qmlhc/backends/: __init__.py  cpp_backend.py  pennylane_backend.py  qiskit_backend.py
src/qmlhc/callbacks/: base.py
src/qmlhc/core/: backend.py  model.py  types.py
src/qmlhc/hc/: graph.py  node.py  policy.py
src/qmlhc/loss/: coherence.py  task.py
src/qmlhc/metrics/: __init__.py  anomalies.py  forecasting.py
src/qmlhc/optim/: api.py
src/qmlhc/predictors/: anticipator.py  projector.py
tests/integration/: test_model_pipeline.py
tests/unit/: test_backends_adapters_fake.py  test_callbacks_module.py  test_core_contracts.py  test_hc_module.py  test_loss_module.py  test_metrics_module.py  test_optim_module.py  test_predictors_module.py
